[package]
name = "ferrum"
version = "0.1.0"
edition = "2021"
authors = ["LunaStev <lunastev@gurmstudis.com>"]
description = "A simple file upload and download server in Rust using Actix"
license = "MPL-2.0"
repository = "https://github.com/LunaStev/ferrum"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
mime = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "ferrum"
path = "src/lib.rs"