[package]
name = "fexon"
version = "0.1.5"
edition = "2021"
authors = ["LunaStev <lunastev@gurmstudis.com>"]
description = "A simple file upload and download server in Rust using Actix"
license = "MPL-2.0"
repository = "https://github.com/LunaStev/fexon"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
mime = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nanoid = "0.4.0"

[lib]
name = "fexon"
path = "src/lib.rs"